--- a/src/ExportControlsWrapper.css
+++ b/src/ExportControlsWrapper.css
@@ -56,8 +56,8 @@
 
 .control-wrapper .button-icon {
   /* vars pleaseee, width(=height) - retake photo padding and font size and a lil */
-  width: calc(10vw - 0.5rem - 0.64rem - 0.5rem);
-  padding: 0.5rem;
+  width: calc(10vw - 0.5rem - 0.64rem - 0.675rem);
+  padding: 0.45rem;
 }
 
 .control-wrapper button {
@@ -74,13 +74,13 @@
   padding: 0.5rem;
 }
 
-@media only screen and (max-width: 1416px) {
+@media only screen and (max-width: 598px) {
   .control-wrapper .button-icon {
     display: none;
   }
 
   .control-wrapper button,
   .export-controls-wrapper .retake-photo-button {
-    padding: 1.2rem;
+    padding: 1.325rem;
   }
 }
